# esp32_helloworld_squareline

./: .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
SquareLineProject/: SquareLine_Project.sll  SquareLine_Project.spj
main/: CMakeLists.txt  display.cpp  display.h  main.cpp
main/devices/: wt32sc01plus.h
main/ui/: ui.c  ui.h
main/ui/screens/: ui_Screen1.c
